--- a/flynow/package.json
+++ b/flynow/package.json
@@ -8,11 +8,13 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "hookrouter": "^1.2.3",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-hook-form": "^3.28.9",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "typeface-roboto": "0.0.75"
