--- a/flynow/package.json
+++ b/flynow/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.2",
+    "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
-    "react-hook-form": "^3.28.9",
+    "bootstrap": "^4.4.1",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^3.28.11",
+    "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "react-validation": "^3.0.7",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
@@ -40,6 +42,6 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.6.0"
+    "eslint": "^6.7.2"
   }
 }
